static/css/style.css
/* IMPORTED STYLESHEET */

@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto&display=swap');



/* BODY */

* {
    margin: 0;
    padding: 0;
    border: 0;
}

html {
    scroll-behavior: smooth;
}

main {
    min-height: 100vh;
}



/* NAVBAR */

.navbar {
    padding: 20px;
    background-color: rgba(23, 161, 80, 0.767);
}

.navbar-collapse a:hover {
    color: rgba(17, 17, 26, 0.5);
}



/* HOMEPAGE */

.top-accordion {
    margin-top: 70px;
}

h1 {
    margin-top: 70px;
}

h4 {
    margin-top: 70px;
    margin-bottom: 70px;
}

.homepage-image {
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 100%;
    height: 55vh;
    object-fit: cover;
}



/* FOOTER */

ul {
    list-style: none;
}

footer {
    height: 90px;
    margin-top: 70px;
    padding-top: 17px;
    background-color: rgba(23, 161, 80, 0.767);;
    text-align: center;
}

footer li {
    display: inline;
    padding: 15px;
}

footer i {
    color: #070707;
    font-size: 140%;
    margin-top: 15px;
}

footer i:hover {
    color: rgba(17, 17, 26, 0.5);
}



/* REGISTRATION AND LOGIN FORMS */

h3 {
    margin-top: 100px;
}

.card {
    margin-top: 40px;
}

.flashes {
    margin-top: 40px;
}

.form-bottom-links {
    margin-top: 30px;
}



/* PROFILE PAGE */

.user-heading {
    margin-bottom: 45px;
}



/* ADD REVIEW PAGE */

.review-heading {
    margin-top: 100px;
    margin-bottom: 70px;
}

.book-review {
    padding-top: 30px;
}

.card {
    background-color: rgba(169, 170, 170, 0.356);
    padding: 75px;
    box-shadow: 1px 1px 5px 2px rgba(144, 146, 145, 0.356);
}

